objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <formula>CASE(  Type__c ,
&quot;Administrative&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01515000004olVD&quot;,&quot;Administrative&quot;,20,20),
&quot;Call&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01515000004olVE&quot;,&quot;Phone&quot;,20,20),
&quot;Email&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01515000004olVF&quot;,&quot;Email&quot;,20,20),
&quot;Meeting&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01515000004olVG&quot;,&quot;Calendar&quot;,20,20), IMAGE(&quot;/servlet/servlet.FileDownload?file=01515000004olVD&quot;,&quot;Administrative&quot;,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all events</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is used by the &quot;Perfect Date Wizard&quot; SE tool to adjust the Due Date on a task or event.</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>43</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RC_Keywords__c</fullName>
        <formula>Subject</formula>
        <label>RC_Keywords</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeriesAccess__c</fullName>
        <formula>IF ( IsRecurring__c , IMAGE(&quot;/img/recurring_activity.gif&quot;, &quot;Recurring&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b15000001HGIJ&amp;eid=&quot;&amp; TaskRecurrenceId__c , &quot;Delete Series&quot;,&quot;_top&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b15000001HGIK&amp;eid=&quot;&amp; TaskRecurrenceId__c , &quot;Change Series Owner&quot;,&quot;_top&quot;), &quot;Individual Task&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskRecurrenceId__c</fullName>
        <externalId>true</externalId>
        <label>TaskRecurrenceId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskSeriesDescribe__c</fullName>
        <label>Series Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Partner__c</fullName>
        <formula>CASE( Type__c , 
&quot;Administration&quot;, IMAGE(&quot;https://na13.salesforce.com/servlet/servlet.FileDownload?file=01515000004olVY&amp;oid=00D7A0000008pI0&quot;,&quot;Administration&quot;,20,20), 
&quot;Call&quot;, IMAGE(&quot;https://na13.salesforce.com/servlet/servlet.FileDownload?file=01515000004olVZ&amp;oid=00D7A0000008pI0&quot;,&quot;Phone&quot;,20,20), 
&quot;Email&quot;, IMAGE(&quot;https://na13.salesforce.com/servlet/servlet.FileDownload?file=01515000004olVa&amp;oid=00D7A0000008pI0&quot;,&quot;Email&quot;,20,20), 
&quot;Meeting&quot;, IMAGE(&quot;https://na13.salesforce.com/servlet/servlet.FileDownload?file=01515000004olVb&amp;oid=00D7A0000008pI0&quot;,&quot;Calendar&quot;,20,20), IMAGE(&quot;https://na13.salesforce.com/servlet/servlet.FileDownload?file=01515000004olVY&amp;oid=00D7A0000008pI0&quot;,&quot;Administration&quot;,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>